--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
+  <h1>SmartRupee</h1>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
