--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>SmartRupee</h1>
+   <section class="hero">
+      <h1>SmartRupee</h1>
+   </section>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
