--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
    <section class="hero">
       <h1>SmartRupee</h1>
    </section>
+   <section class="features">
+    <div class="feature">
+      <h2>Fast</h2>
+      <p>Optimized for speed and performance.</p>
+    </div>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
