--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   </nav>
    <section class="features">
     <div class="feature">
+       <img src="your-image-url.jpg" alt="Feature Image">
+       <div>
       <h2>Fast</h2>
       <p>Optimized for speed and performance.</p>
+       </div>
     </div>
   
   <p>This is the homepage.</p>
