--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       <h1>SmartRupee</h1>
    </section>
    <nav>
+       <div class="dropdown">
+      <button class="dropbtn">Articles</button>
+      <div class="dropdown-content" id="dropdownContent">
+        <a href="art1.md"The illusion of Luxury">illusion of Luxury</a>
+        <a href="#">Best Beginner Investment Watches in India (2025 Guide)</a>
+      </div>
+    </div>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
