--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <nav>
       <div class="dropdown"><button class="dropbtn">Articles</button><div class="dropdown-content" id="dropdownContent"><a href="#">illusion of Luxury</a><a href="#">Best Beginner Investment Watches in India (2025 Guide)</a></div>
       </div>
+   </nav>
+   <nav>
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
