--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       <h1>SmartRupee</h1>
    </section>
    <nav>
-      <div class="dropdown"><button class="dropbtn">Articles</button><div class="dropdown-content" id="dropdownContent"><a href="#">illusion of Luxury</a><a href="#">Best Beginner Investment Watches in India (2025 Guide)</a></div>
+      <div class="dropdown"><button class="dropbtn">Articles</button>
+         <div class="dropdown-content" id="dropdownContent">
+            <a href="#">illusion of Luxury</a>
+            <a href="#">Best Beginner Investment Watches in India (2025 Guide)</a>
+         </div>
       </div>
    </nav>
    <nav>
