--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#">illusion of Luxury</a>
             <a href="#">Best Beginner Investment Watches in India (2025 Guide)</a>
          </div>
-      </div> </a>
+      </div> </a> |
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
