--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
     </div>
   
   <p>This is the homepage.</p>
+   
+   <footer>
+    &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
+   </footer>
 </body>
 </html>
