--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <nav>
       <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
          <div class="dropdown-content" id="dropdownContent">
-            <a href="#">illusion of Luxury</a>
+            <a href="illusion-of-luxury.html">illusion of Luxury</a>
             <a href="#">Best Beginner Investment Watches in India (2025 Guide)</a>
          </div>
       </div> </a> |
