--- a/beginner-watches.html
+++ b/beginner-watches.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Best beginner investment watches in India</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
   <h1>Illusion of Luxury</h1>
