--- a/beginner-watches.html
+++ b/beginner-watches.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Illusion of Luxury</h1>
-  <img src="luxury-image.jpg" alt="Luxury Illusion Image" class="article-image">
+  <img src="Watch collage.png" alt="Luxury Illusion Image" class="article-image">
 
   <p>
     In today’s consumer-driven world, luxury is often less about quality and more about perception. 
