--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
          <div class="dropdown-content" id="dropdownContent">
             <a href="illusion-of-luxury.html">illusion of Luxury</a>
-            <a href="#">Best Beginner Investment Watches in India (2025 Guide)</a>
+            <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
          </div>
       </div> </a> |
       <a href="index.html">Home</a> |
