--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
    <footer>
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
    </footer>
+      
+   <footer>
+  <p>Follow me:</p>
+  <a href="https://www.instagram.com/yourusername" target="_blank">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
+  </a>
+  <a href="https://www.facebook.com/yourusername" target="_blank">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="social-icon">
+  </a>
+</footer>
+
 </body>
 </html>
