--- a/home.html
+++ b/home.html
@@ -5,11 +5,19 @@
 </head>
 <body>
   <h1>Welcome to My Website</h1>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
+
+   <nav>
+      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+         <div class="dropdown-content" id="dropdownContent">
+            <a href="illusion-of-luxury.html">illusion of Luxury</a>
+            <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
+         </div>
+      </div> </a> |
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+   </nav>
+  
   <p>This is the homepage.</p>
 </body>
 </html>
