--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+
+ <nav>
+      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+         <div class="dropdown-content" id="dropdownContent">
+            <a href="illusion-of-luxury.html">illusion of Luxury</a>
+            <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
+         </div>
+      </div> </a> |
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+   </nav>
+  
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
