--- a/about.html
+++ b/about.html
@@ -6,11 +6,19 @@
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+
+ <nav>
+      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+         <div class="dropdown-content" id="dropdownContent">
+            <a href="illusion-of-luxury.html">illusion of Luxury</a>
+            <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
+         </div>
+      </div> </a> |
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+   </nav>
+  
   <h1>About Me</h1>
   <p>This page tells you more about who I am and what I do.</p>
 </body>
