--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -6,6 +6,18 @@
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+   <nav>
+      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+         <div class="dropdown-content" id="dropdownContent">
+            <a href="illusion-of-luxury.html">illusion of Luxury</a>
+            <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
+         </div>
+      </div> </a> |
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a>
+   </nav>
+  
   <h1>Illusion of Luxury</h1>
   <img src="luxury-image.jpg" alt="Luxury Illusion Image" class="article-image">
 
