--- a/about.html
+++ b/about.html
@@ -21,5 +21,20 @@
   
   <h1>About Me</h1>
   <p>This page tells you more about who I am and what I do.</p>
+
+<script>
+    const dropbtn = document.querySelector('.dropbtn');
+    const dropdown = document.getElementById('dropdownContent');
+
+    dropbtn.addEventListener('click', function (e) {
+      e.stopPropagation();
+      dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+    });
+
+    document.addEventListener('click', function () {
+      dropdown.style.display = 'none';
+    });
+  </script>
+  
 </body>
 </html>
