--- a/about.html
+++ b/about.html
@@ -21,6 +21,31 @@
   
   <h1>About Me</h1>
   <p>This page tells you more about who I am and what I do.</p>
+  
+  <h1>About Smart Rupee</h1>
+  <p>Smart Tinking. Smarter Money.</p>
+  <p>SmartRupee is a digital space for those who want to understand money without distractions. 
+    In a world filled with hype, half-truths, and quick-success stories, we offer something different.
+  we provide honest, thoughtful content that helps you think critically about wealth, investment and financial truth.</p>
+
+  <h1>What we're about</h1>
+  <p>We dont sell shortcuts or glorify luxury.
+    Instead, we help you ask better questions, build awareness around money, and develop a long-term mindset that truely works.
+  From basic money management to deeper insights on financial culture, SmartRupee looks at many facets of personal finance-the real,
+   the overlooked and often misrepresented.</p>
+
+  <h1>Why It Matters?</h1>
+  <p>Today's digital world is crowded with influencers and trends that confuse real wealth with well-crafted appreances.
+   SmartRupee was created to address this by bringing clarity, transparency, and critical thinking back into the discussion.
+   Whether you're just starting or reconsidering your money approach, our aim it to provide content that respects your intelligence,
+   supports your growth, and challanges common beliefs.</p>
+
+  <h1>Our Vision!</h1>
+  <p>We want to build a community that values financial literacy more than financial make-belive,
+     where smart choices matter more than surface-level success.
+   money doesn't have to be complicated.
+  but it should be real.</p>
+  <p>Welcome to SmartRupee, Where financial clarity begins</p>
 
 <script>
     const dropbtn = document.querySelector('.dropbtn');
