--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     In a world filled with hype, half-truths, and quick-success stories, we offer something different.
   we provide honest, thoughtful content that helps you think critically about wealth, investment and financial truth.</p>
 
-  <h1>What we're about</h1>
+  <h1>What we're about?</h1>
   <p>We dont sell shortcuts or glorify luxury.
     Instead, we help you ask better questions, build awareness around money, and develop a long-term mindset that truely works.
   From basic money management to deeper insights on financial culture, SmartRupee looks at many facets of personal finance-the real,
