--- a/about.html
+++ b/about.html
@@ -46,6 +46,9 @@
    money doesn't have to be complicated.
   but it should be real.</p>
   <p>Welcome to SmartRupee, Where financial clarity begins</p>
+  <footer>
+    &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
+  </footer>
 
 <script>
     const dropbtn = document.querySelector('.dropbtn');
