--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About</title>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style-art.css">
 </head>
 <body>
 
