--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
    </nav>
    
    <section class="features">
-    <div class="feature">
-       <img src="your-image-url.jpg" alt="Feature Image">
-       <div>
-      <h2>Fast</h2>
-      <p>Optimized for speed and performance.</p>
-       </div>
-    </div>
+      <a href="your-target-page.html" class="feature-link">
+         <div class="feature">
+            <img src="your-image-url.jpg" alt="Feature Image">
+            <div>
+               <h2>Fast</h2>
+               <p>Optimized for speed and performance.</p>
+            </div>
+         </div>
+      </a>
+   </section>
       
    <script>
     const dropbtn = document.querySelector('.dropbtn');
