--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
    </nav>
    
    <section class="features">
-      <a href="your-target-page.html" class="feature-link">
+      <a href="illusion-of-luxury.html" class="feature-link">
          <div class="feature">
             <img src="your-image-url.jpg" alt="Feature Image">
             <div>
                <h2>Fast</h2>
-               <p>Optimized for speed and performance.</p>
+               <p>illusion of luxury</p>
             </div>
          </div>
       </a>
