--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <div class="feature">
             <img src="your-image-url.jpg" alt="Feature Image">
             <div>
-               <h2>Fast</h2>
+               <h2>illusion of luxury</h2>
                <p>illusion of luxury</p>
             </div>
          </div>
