--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <section class="features">
       <a href="illusion-of-luxury.html" class="feature-link">
          <div class="feature">
-            <img src="your-image-url.jpg" alt="Feature Image">
+            <img src="copyrights-free-luxury.jpg" alt="Feature Image">
             <div>
                <h2>illusion of luxury</h2>
                <p>illusion of luxury</p>
