--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -19,7 +19,7 @@
    </nav>
   
   <h1>Illusion of Luxury</h1>
-  <img src="luxury-image.jpg" alt="Luxury Illusion Image" class="article-image">
+  <img src="copyrights-free-luxury.jpg" alt="Luxury Illusion Image" class="article-image">
 
   <p>
     In today’s consumer-driven world, luxury is often less about quality and more about perception. 
