--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
          </div>
       </a>
    </section>
+
+   <section class="features">
+      <a href="beginner-watches.html" class="feature-link">
+         <div class="feature">
+            <img src="beginner-watches.jpg" alt="Feature Image">
+            <div>
+               <h2>Beginner watches</h2>
+               <p>Beginner watches</p>
+            </div>
+         </div>
+      </a>
+   </section>
       
    <script>
     const dropbtn = document.querySelector('.dropbtn');
