--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <section class="features">
       <a href="beginner-watches.html" class="feature-link">
          <div class="feature">
-            <img src="beginner-watches.jpg" alt="Feature Image">
+            <img src="Watch collage.png" alt="Feature Image">
             <div>
                <h2>Beginner watches</h2>
                <p>Beginner watches</p>
