--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
    <section class="features">
       <a href="illusion-of-luxury.html" class="feature-link">
-         <div class="feature">
+         <div class="feature-text">
             <img src="copyrights-free-luxury.jpg" alt="Feature Image">
             <div>
                <h2>illusion of luxury</h2>
