--- a/beginner-watches.html
+++ b/beginner-watches.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <h1>Illusion of Luxury</h1>
+  <h1>Best beginner investment watches in India</h1>
   <img src="Watch collage.png" alt="Luxury Illusion Image" class="article-image">
 
   <p>
