--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -36,6 +36,20 @@
     This article explores how modern luxury has evolved into a psychological experience, and how we can navigate it with clarity and intention.
   </p>
 
+ <footer>
+    &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
+   </footer>
+      
+   <footer>
+  <p>Follow me:</p>
+  <a href="https://www.instagram.com/smartrupee11" target="_blank">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
+  </a>
+  <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="social-icon">
+  </a>
+</footer>
+  
 <script>
     const dropbtn = document.querySelector('.dropbtn');
     const dropdown = document.getElementById('dropdownContent');
