--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Illusion of Luxury</title>
-  <link rel="stylesheet" href="style-art.css">
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
    <nav>
