--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    <footer>
   <p>Follow me:</p>
   <a href="https://www.instagram.com/smartrupee11" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
+    <img src="https://icons8.com/icon/32292/instagram" alt="Instagram" class="social-icon">
   </a>
   <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
     <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="social-icon">
