--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <img src="https://icons8.com/icon/32292/instagram" alt="Instagram" class="social-icon">
   </a>
   <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="social-icon">
+    <img src="https://icons8.com/icon/118466/facebook" alt="Facebook" class="social-icon">
   </a>
 </footer>
 
