--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
    <footer>
   <p>Follow me:</p>
   <a href="https://www.instagram.com/smartrupee11" target="_blank">
-    <img src="https://icons8.com/icon/32292/instagram" alt="Instagram" class="social-icon">
+    <img src="Insta-icon.png" alt="Instagram" class="social-icon">
   </a>
   <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
-    <img src="https://icons8.com/icon/118466/facebook" alt="Facebook" class="social-icon">
+    <img src="Facebook-icon.png" alt="Facebook" class="social-icon">
   </a>
 </footer>
 
