--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -43,10 +43,10 @@
    <footer>
   <p>Follow me:</p>
   <a href="https://www.instagram.com/smartrupee11" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
+    <img src="Insta-icon.png" alt="Instagram" class="social-icon">
   </a>
   <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="social-icon">
+    <img src="Facebook-icon.png" alt="Facebook" class="social-icon">
   </a>
 </footer>
   
