--- a/about.html
+++ b/about.html
@@ -18,12 +18,14 @@
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
    </nav>
-    
+
+  <section class="p1">
   <h1>About Smart Rupee</h1>
   <p>Smart Tinking. Smarter Money.</p>
   <p>SmartRupee is a digital space for those who want to understand money without distractions. 
     In a world filled with hype, half-truths, and quick-success stories, we offer something different.
   we provide honest, thoughtful content that helps you think critically about wealth, investment and financial truth.</p>
+  </section>
 
   <h1>What we're about?</h1>
   <p>We dont sell shortcuts or glorify luxury.
