--- a/about.html
+++ b/about.html
@@ -29,22 +29,29 @@
   </section>
 
   <h1>What we're about?</h1>
+  <section class="p1">
   <p>We dont sell shortcuts or glorify luxury.
     Instead, we help you ask better questions, build awareness around money, and develop a long-term mindset that truely works.
   From basic money management to deeper insights on financial culture, SmartRupee looks at many facets of personal finance-the real,
    the overlooked and often misrepresented.</p>
+  </section>
 
   <h1>Why It Matters?</h1>
+  <section class="p1">
   <p>Today's digital world is crowded with influencers and trends that confuse real wealth with well-crafted appreances.
    SmartRupee was created to address this by bringing clarity, transparency, and critical thinking back into the discussion.
    Whether you're just starting or reconsidering your money approach, our aim it to provide content that respects your intelligence,
    supports your growth, and challanges common beliefs.</p>
+  </section>
 
   <h1>Our Vision!</h1>
+  <section class="p1">
   <p>We want to build a community that values financial literacy more than financial make-belive,
      where smart choices matter more than surface-level success.
    money doesn't have to be complicated.
   but it should be real.</p>
+  </section>
+  
   <p>Welcome to SmartRupee, Where financial clarity begins</p>
   
   <footer>
