--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
    </nav>
 
   <h1>About Smart Rupee</h1>
-  
+
+  <p2>Smart Tinking. Smarter Money.</p2>
   <section class="p1">
-  <p>Smart Tinking. Smarter Money.</p>
   <p>SmartRupee is a digital space for those who want to understand money without distractions. 
     In a world filled with hype, half-truths, and quick-success stories, we offer something different.
   we provide honest, thoughtful content that helps you think critically about wealth, investment and financial truth.</p>
@@ -52,7 +52,7 @@
   but it should be real.</p>
   </section>
   
-  <p>Welcome to SmartRupee, Where financial clarity begins</p>
+  <p2>Welcome to SmartRupee, Where financial clarity begins</p2>
   
   <footer>
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
