--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
    </footer>
       
    <footer>
+   <div>
   <p>Follow me:</p>
-  <a href="https://www.instagram.com/smartrupee11" target="_blank">
-    <img src="Insta-icon.png" alt="Instagram" class="social-icon">
+      <div>
+         <a href="https://www.instagram.com/smartrupee11" target="_blank">
+         <img src="Insta-icon.png" alt="Instagram" class="social-icon">
+      </div>
+   </div>
   </a>
   <a href="https://www.facebook.com/profile.php?id=61578332049263" target="_blank">
     <img src="Facebook-icon.png" alt="Facebook" class="social-icon">
