--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    </section>
    
    <nav>
-      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+      <a><div class="dropdown"><button class="dropbtn">Articles</button>
          <div class="dropdown-content" id="dropdownContent">
             <a href="illusion-of-luxury.html">illusion of Luxury</a>
             <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
