--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <div class="feature">
             <img src="copyrights-free-luxury.jpg" alt="Feature Image">
             <div>
-               <h2>illusion of luxury</h2>
+               <h>illusion of luxury</h>
                <p>illusion of luxury</p>
             </div>
          </div>
@@ -38,7 +38,7 @@
          <div class="feature">
             <img src="Watch collage.png" alt="Feature Image">
             <div>
-               <h2>Beginner watches</h2>
+               <h>Beginner watches</h>
                <p>Beginner watches</p>
             </div>
          </div>
