--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
    </nav>
 
   <h1>About Smart Rupee</h1>
-
+  
+  <section class="p2">
   <p2>Smart Tinking. Smarter Money.</p2>
+  </section>
+  
   <section class="p1">
   <p>SmartRupee is a digital space for those who want to understand money without distractions. 
     In a world filled with hype, half-truths, and quick-success stories, we offer something different.
@@ -51,9 +54,11 @@
    money doesn't have to be complicated.
   but it should be real.</p>
   </section>
-  
+
+  <section class="p2">
   <p2>Welcome to SmartRupee, Where financial clarity begins</p2>
-  
+  </section>
+    
   <footer>
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
   </footer>
