--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="beginner-watches.html" class="feature-link">
          <div class="feature">
             <img src="Watch collage.png" alt="Feature Image">
-            <div class="feature-text>
+            <div class="feature-text">
                <h2>Beginner watches</h2>
                <p>Beginner watches</p>
             </div>
