--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <div class="feature">
             <img src="copyrights-free-luxury.jpg" alt="Feature Image">
             <div>
-               <h2>illusion of luxury</h2>
+               <h2>Sell Fridges? The illusion of Luxury: When Influencers Fake It and Brands Look Away</h2>
                <p>illusion of luxury</p>
             </div>
          </div>
