--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="illusion-of-luxury.html" class="feature-link">
          <div class="feature">
             <img src="copyrights-free-luxury.jpg" alt="Feature Image">
-            <div>
+            <div class="feature-text">
                <h2>Sell Fridges? The illusion of Luxury: When Influencers Fake It and Brands Look Away</h2>
                <p>illusion of luxury</p>
             </div>
