--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <div class="feature">
             <img src="Watch collage.png" alt="Feature Image">
             <div class="feature-text">
-               <h2>Beginner watches</h2>
+               <h2>Best Beginner Investment Watches in India (2025 Guide)</h2>
               | <p>Click to Read</p> |
             </div>
          </div>
