--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="copyrights-free-luxury.jpg" alt="Feature Image">
             <div class="feature-text">
                <h2>Sell Fridges? The illusion of Luxury: When Influencers Fake It and Brands Look Away</h2>
-              | <p>Click to Read</p> |
+               <p>Click to Read</p>
             </div>
          </div>
       </a>
@@ -39,7 +39,7 @@
             <img src="Watch collage.png" alt="Feature Image">
             <div class="feature-text">
                <h2>Best Beginner Investment Watches in India (2025 Guide)</h2>
-              | <p>Click to Read</p> |
+               <p>Click to Read</p>
             </div>
          </div>
       </a>
