--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -21,12 +21,24 @@
   <h1>Sell Fridges? The illusion of Luxury: When Influencers Fake It and Brands Look Away</h1>
   <img src="copyrights-free-luxury.jpg" alt="Luxury Illusion Image" class="article-image">
 
-  <p>The distinction between illusion and authenticity in luxury culture has never been more hazy in a time when image is money. The most recent instance? One of the most prominent luxury department stores in the UK, Selfridges, released a promotional video with model and influencer Jordan Hames.
-Link to video - https://www.instagram.com/p/DMN9myWoVjX/
+  <p>
+    The distinction between illusion and authenticity in luxury culture has never been more hazy in a time when image is money. 
+    The most recent instance? One of the most prominent luxury department stores in the UK, Selfridges, 
+    released a promotional video with model and influencer Jordan Hames.
+    Link to video - https://www.instagram.com/p/DMN9myWoVjX/
+  </P>
 
-Jordan casually claims to be the owner of a rare 1980 Piaget watch in the video, a vintage timepiece that is worth well into the five-figure range. However, there isn't any reliable proof, historical records, or even confirmed visual evidence that he owns such a watch. No posts displaying the watch outside of the Selfridges promotional reel, no serial number, and no acknowledgement from watch enthusiast communities.
+  <p>
+    Jordan casually claims to be the owner of a rare 1980 Piaget watch in the video, 
+    a vintage timepiece that is worth well into the five-figure range. 
+    However, there isn't any reliable proof, historical records, or even confirmed visual evidence that he owns such a watch. 
+    No posts displaying the watch outside of the Selfridges promotional reel, 
+    no serial number, and no acknowledgement from watch enthusiast communities.
+  </p>
 
-Why is this important, then? Because exclusivity and authenticity are the foundations of luxury. When an individual makes a fraudulent claim to ownership
+  <p>
+    Why is this important, then? Because exclusivity and authenticity are the foundations of luxury. 
+    When an individual makes a fraudulent claim to ownership
   </p>
 
   <p>
