--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -41,6 +41,8 @@
     When an individual makes a fraudulent claim to ownership
   </p>
 
+  <h>The Issue With "Prop Wealth"</h>
+
   <p>
     But when we peel back the layers, we often find that the materials, production methods, and even design are comparable to more affordable alternatives. 
     The true luxury may lie in making informed choices — valuing authenticity over branding, and substance over style.
