--- a/illusion-of-luxury.html
+++ b/illusion-of-luxury.html
@@ -44,14 +44,41 @@
   <h>The Issue With "Prop Wealth"</h>
 
   <p>
-    But when we peel back the layers, we often find that the materials, production methods, and even design are comparable to more affordable alternatives. 
-    The true luxury may lie in making informed choices — valuing authenticity over branding, and substance over style.
+   Performative wealth has evolved into its own marketing strategy in the influencer economy of today. 
+    Influencers pretend to own watches they don't, rent Ferraris, borrow expensive clothing, 
+    and pose in upscale hotels and staged homes. Jordan Hames, for example, 
+    has been tagged in a number of photo shoots with a Ferrari that he does not own, 
+    as well as upscale hotels and private homes that seem to be rented purely for aesthetic reasons.
   </p>
 
   <p>
-    This article explores how modern luxury has evolved into a psychological experience, and how we can navigate it with clarity and intention.
+    The objective? to gain the trust of followers and, consequently, 
+    of brands. Informally referred to as "prop wealth," this practice is not only dishonest but also harmful.
   </p>
 
+<p>Today's consumers purchase more than just goods. 
+  They're adopting the way of life and apparent success that influencers display. 
+  Everyone loses when that success is revealed to be a façade
+</p>
+
+<h>What was Selfridges contemplating?</h>
+
+  <p>
+    Selfridges has unintentionally given credence to an illusion by including Jordan Hames in a promotional reel without first confirming the veracity of his claims. 
+    The retailer has allowed a potentially misleading narrative to represent its brand, which is meant to stand for heritage, 
+    quality, and timeless luxury, whether through negligence or indifference.
+</p>
+  <p>
+    This is more than just a PR blunder. It's a sign of how some luxury brands are prioritizing reach over reputation. They might be giving up the exclusivity that used to define them in the name of influencer engagement.
+</p>
+
+<h>The Significance of Authenticity</h>
+  <p>In the world of luxury, trust is money. 
+    Companies such as Piaget, Jaeger-LeCoultre, and others invest decades in creating enduring traditions based on uniqueness and artistry. 
+    When someone makes unverified claims about owning such items, and that claim is platformed by a luxury retailer, 
+    it undermines the real value of those goods and disrespects genuine collectors.
+  </p>
+  
  <footer>
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
    </footer>
