--- a/beginner-watches.html
+++ b/beginner-watches.html
@@ -19,24 +19,66 @@
       <a href="contact.html">Contact</a>
    </nav>
   
-  <h1>Best beginner investment watches in India</h1>
+  <h1>Best Beginner Investment Watches in India (2025 Guide)</h1>
   <img src="Watch collage.png" alt="Luxury Illusion Image" class="article-image">
 
   <p>
-    In today’s consumer-driven world, luxury is often less about quality and more about perception. 
-    Brands craft an aura of exclusivity through marketing, packaging, and pricing — not necessarily through superior craftsmanship. 
-    The illusion of luxury is powerful: it convinces us that spending more equates to better value, status, or happiness.
+    Are you thinking of buying your first luxury watch? Whether you're a collector or just starting with investment watches, 
+    this guide will help you find the best beginner investment watches in India. These options are affordable, 
+    stylish, and likely to increase in value. From Swiss classics to Indian value picks, 
+    here's what you need to know before making your first purchase.
   </p>
-
+  
+  <h1>Why Invest in a Watch?</h1>
   <p>
-    But when we peel back the layers, we often find that the materials, production methods, and even design are comparable to more affordable alternatives. 
-    The true luxury may lie in making informed choices — valuing authenticity over branding, and substance over style.
+    Watches are not just for telling time anymore; 
+    they are assets. Many investment watches hold or even increase their value over time, 
+    especially limited editions, Swiss automatics, or those associated with prestigious brands.
   </p>
-
   <p>
-    This article explores how modern luxury has evolved into a psychological experience, and how we can navigate it with clarity and intention.
+    You don’t have to spend a lot. In India, you can find entry-level investment watches for under ₹1 lakh that provide good resale value, 
+    craftsmanship, and heritage.
   </p>
 
+  <h>Top 5 Beginner Investment Watches Under ₹1 Lakh</h>
+  <p>1. Tissot PRX Powermatic 80</p>
+  <p>Price: ~₹75,000</p>
+  <p>Movement Type: Swiss Quartz</p>
+  <P>Why it’s great: Classic design, Swiss-movement, automatic, strong resale interest</P>
+  <P>Estimated Future Value (2028-2030): ₹70,000–₹95,000</P>
+
+  <p>2. Seiko Presage Cocktail Time</p>
+  <p>Price: ~₹47,000</p>
+  <p>Movement Type: Automatic with manual winding</p>
+  <p>Why it’s great: Japan’s mechanical beauty with high-end finishing</p>
+  <p>Estimated Future Value (2028-2030): ₹45,000–₹75,000</p>
+
+  <p>3. Citizen NJ0150 Automatic</p>
+  <p>Price: ~₹35,000</p>
+  <p>Movement Type: Automatic</p>
+  <p>Why it’s great: Entry-level automatic, durable, sapphire crystal</p>
+  <p>Estimated Future Value (2028-2030): ₹28,000–₹45,000</p>
+
+  <p>4. Hamilton Khaki Field Mechanical</p>
+  <p>Price: ~₹65,000</p>
+  <p>Movement Type: Automatic</p>
+  <p>Why it’s great: U.S. heritage, military-inspired, Swiss-made, manual wind</p>
+  <p>Estimated Future Value (2028-2030): ₹55,000–₹80,000</p>
+
+  <p>5. Titan Caelum Multifunction Automatic (Stellar 2.0)</p>
+  <p>Price: ~₹84,995</p>
+  <p>Movement Type: In-House Multifunction Movement</p>
+  <p>Why it’s great: Grade 5 titanium case and sapphire crystal, Space-inspired complications, durable and elegant and Made in India</p>
+  <p>Estimated Future Value (2028-2030): ₹55,000–₹75,000</p>
+
+  <h>Final Thoughts</h>
+  <p>Choosing your first investment watch doesn’t have to be overwhelming. 
+    Stick to well-known brands, automatic movements, and timeless designs. 
+    Whether you’re buying a starter luxury watch, building a watch collection for beginners in India, 
+    or looking for a valuable gift, the models listed above offer great potential.
+  </p>
+  <p>Ready to invest? Your watch journey starts now. It could lead you to lasting returns.</p>
+  
 <script>
     const dropbtn = document.querySelector('.dropbtn');
     const dropdown = document.getElementById('dropdownContent');
