--- a/beginner-watches.html
+++ b/beginner-watches.html
@@ -41,7 +41,8 @@
   </p>
 
   <h>Top 5 Beginner Investment Watches Under ₹1 Lakh</h>
-  
+
+  <section class="p2">
   <p1>1. Tissot PRX Powermatic 80</p1>
   <p>Price: ~₹75,000</p>
   <p>Movement Type: Swiss Quartz</p>
@@ -71,6 +72,7 @@
   <p>Movement Type: In-House Multifunction Movement</p>
   <p>Why it’s great: Grade 5 titanium case and sapphire crystal, Space-inspired complications, durable and elegant and Made in India</p>
   <p>Estimated Future Value (2028-2030): ₹55,000–₹75,000</p>
+  </section>
 
   <h>Final Thoughts</h>
   <p>Choosing your first investment watch doesn’t have to be overwhelming. 
