--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
+     crossorigin="anonymous"></script>
    <link rel="stylesheet" href="style1.css">
   <title>Home</title>
 </head>
