--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
    </nav>
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
+     crossorigin="anonymous"></script>
+<!-- home below brand -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3445718473291195"
+     data-ad-slot="3359869856"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
    
    <section class="features">
       <a href="illusion-of-luxury.html" class="feature-link">
@@ -64,6 +77,19 @@
    <footer>
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
    </footer>
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
+     crossorigin="anonymous"></script>
+<!-- All pages bottom horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3445718473291195"
+     data-ad-slot="1499993271"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       
    <footer>
       <p>Follow me:</p>
@@ -74,6 +100,18 @@
       <img src="Facebook-icon.png" alt="Facebook" class="social-icon">
       </a>
    </footer>
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-3+1f-3d+2z"
+     data-ad-client="ca-pub-3445718473291195"
+     data-ad-slot="7447504279"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </body>
 </html>
