--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+ #g-ads
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
      crossorigin="anonymous"></script>
    <link rel="stylesheet" href="style1.css">
+#g-ads
+   
   <title>Home</title>
 </head>
 <body>
@@ -78,6 +83,7 @@
     &copy; COPYRIGHT © 2025 SMARTRUPEE - ALL RIGHTS RESERVED
    </footer>
 
+   #g-ads
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
      crossorigin="anonymous"></script>
 <!-- All pages bottom horizontal -->
@@ -90,7 +96,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-      
+#g-ads
+   
    <footer>
       <p>Follow me:</p>
       <a href="https://www.instagram.com/smartrupee11" target="_blank">
@@ -101,6 +108,7 @@
       </a>
    </footer>
 
+   #g-ads
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3445718473291195"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -112,6 +120,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+#g-ads
+   
 </body>
 </html>
