--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <h1>About Smart Rupee</h1>
   
   <section class="p2">
-  <p2>Smart Tinking. Smarter Money.</p2>
+  <p2>Smart Thinking. Smarter Money.</p2>
   </section>
   
   <section class="p1">
