--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
   <section class="p1">
   <p>Today's digital world is crowded with influencers and trends that confuse real wealth with well-crafted appreances.
    SmartRupee was created to address this by bringing clarity, transparency, and critical thinking back into the discussion.
-   Whether you're just starting or reconsidering your money approach, our aim it to provide content that respects your intelligence,
+   Whether you're just starting or reconsidering your money approach, our aim is to provide content that respects your intelligence,
    supports your growth, and challanges common beliefs.</p>
   </section>
 
@@ -56,7 +56,7 @@
   <section class="p1">
   <p>We want to build a community that values financial literacy more than financial make-belive,
      where smart choices matter more than surface-level success.
-   money doesn't have to be complicated.
+   money doesn't have to be complicated,
   but it should be real.</p>
   </section>
 
