--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
    </section>
       
    <script>
-    const dropbtn = document.querySelector('.dropbtn');
-    const dropdown = document.getElementById('dropdownContent');
+    <script src="script.js"></script>
+
 
     dropbtn.addEventListener('click', function (e) {
       e.stopPropagation();
