--- a/about.html
+++ b/about.html
@@ -13,15 +13,20 @@
 <body>
 
  <nav>
-      <a></a> <div class="dropdown"><button class="dropbtn">Articles</button>
+        <div class="nav-left">
+        <div class="dropdown">
+        <button class="dropbtn">Articles</button>
          <div class="dropdown-content" id="dropdownContent">
             <a href="illusion-of-luxury.html">illusion of Luxury</a>
             <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
          </div>
-      </div> </a> |
+      </div>
+        </div>
+      <div class="nav-right">
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
+      </div>
    </nav>
 
   <h1>About Smart Rupee</h1>
