--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
    </section>
    
    <nav>
-      <a><div class="dropdown">
+      <a>
+         <div class="dropdown">
          <button class="dropbtn">Articles</button>
          <div class="dropdown-content" id="dropdownContent">
             <a href="illusion-of-luxury.html">illusion of Luxury</a>
             <a href="beginner-watches.html">Best Beginner Investment Watches in India (2025 Guide)</a>
          </div>
-      </div> </a> |
+         </div> 
+      </a> |
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="contact.html">Contact</a>
