--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div> 
       </a> |
       <a href="home">Home</a> |
-      <a href="about/about.html">About</a> |
+      <a href="about/">About</a> |
       <a href="contact.html">Contact</a>
    </nav>
 
